--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,23 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>maven-twttr</id>
+			<name>Twitter Public Maven Repo</name>
+			<url>http://maven.twttr.com</url>
+		</repository>
+	</repositories>
 	<dependencies>
+
+
+		<!-- https://mvnrepository.com/artifact/ua_parser/ua-parser -->
+		<dependency>
+			<groupId>ua_parser</groupId>
+			<artifactId>ua-parser</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
 		<dependency> <!-- Spark dependency -->
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.11</artifactId>
